Made a sentence clearer

--- a/controversy/index.html
+++ b/controversy/index.html
@@ -107,7 +107,7 @@
             <img src="./images/torture.jpg">
           </section>
           <section>
-            <h2>Exist so others can use classes without deeply understanding them</h2>
+            <h2>Docs exist so others can use classes without deeply understanding them</h2>
           </section>
 					<section>
 						<h1>Sane &amp; Useful Docs</h1>
